# nexlink-server

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  init_db.py  main.py  nexlink.db  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_orchestration_tables.py  0003_automation_tables.py  0004_nexlink_v2_schema.py
server/api/: deps.py  router.py
server/api/v1/: alerts.py  apk.py  auth.py  automation.py  logs.py  (+6 more)
server/automation/: __init__.py  allocator.py  engine.py  queue.py  recovery.py  runner.py
server/config/: settings.py
server/core/: exceptions.py  lifecycle.py  security.py
server/db/: base.py  compat.py  session.py
server/orchestration/: __init__.py  dependency_graph.py  engine.py  notification_engine.py  pairing_manager.py  reconnect_orchestrator.py  session_orchestrator.py  state_sync.py
server/remote_control/: __init__.py  audit_logger.py  coordinate_mapper.py  gesture_router.py  lock_manager.py  manager.py
server/schemas/: __init__.py  alert.py  auth.py  automation.py  command.py  common.py  device.py  event.py  heartbeat.py  screenshot.py  xml_snapshot.py
server/services/: __init__.py  auth_service.py  automation_scheduler.py  device_registry.py  device_service.py  event_bus.py  health_service.py  heartbeat_manager.py  logging_service.py  reconnect_manager.py  session_manager.py  ws_keepalive.py
server/streaming/: __init__.py  session_manager.py
server/ws/: gateway.py  handlers.py  manager.py  remote_gateway.py  viewer_manager.py
(+10 files in other folders)
