[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nexlink-server"
version = "2.0.0"
description = "NexLink Orchestration Server — centralized device registry, heartbeat management, and real-time orchestration"
requires-python = ">=3.12"
dependencies = [
    # API framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",  # sync driver for Alembic offline mode

    # Validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP client (admin calls)
    "httpx>=0.27.0",

    # Utilities
    "pyyaml>=6.0",
    "python-dateutil>=2.9.0",
    "orjson>=3.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "httpx>=0.27.0",  # test client
    "faker>=25.0",
]

[project.scripts]
nexlink-server = "main:main"

[tool.hatch.build.targets.wheel]
packages = ["server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
